// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for list 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F6;
  width: 100%;
  height: 2rem;
  color: #3F3F42;
  padding: 0 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    border: solid 0.1875rem transparent;
    border-bottom: transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    margin-inline: 0.5rem;
    margin: 0;
  }
}

@media (min-width: 25rem) {
  .emotion-4 {
    margin-inline: 1rem;
    padding: 0 1rem;
    margin: 0 -0.2rem;
  }
}

.emotion-5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-7 ul {
  list-style: none;
  -webkit-padding-start: 0;
  padding-inline-start: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;
}

.is-opera-mini .emotion-7 {
  list-style: none;
  -webkit-padding-start: 0;
  padding-inline-start: 0;
  margin: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-inline: 0.5rem;
}

.emotion-8:last-of-type {
  margin-bottom: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-8 {
    border: solid 0.1875rem transparent;
  }
}

@media (min-width: 25rem) {
  .emotion-8 {
    margin-inline: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin-inline: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-8 {
    margin-inline: 0;
  }
}

@media (max-width: 14.9375rem) {
  .is-opera-mini .emotion-8 {
    margin-inline: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-8 {
    margin-inline: 1rem;
  }
}

@media (min-width: 63rem) {
  .is-opera-mini .emotion-8 {
    margin-inline: 0;
  }
}

.emotion-9 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-9 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-9 {
    width: calc(50% - 1rem);
  }
}

.emotion-10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #545658;
}

.emotion-11 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
}

<div>
  <section
    aria-labelledby="Show-all-links-no-images"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <strong
        class="emotion-4"
        data-testid="eoj-recommendations-heading"
        id="Show-all-links-no-images"
      >
        Show all links (no images)
      </strong>
      <p
        class="emotion-5 emotion-6"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
    <div
      class="emotion-7"
    >
      <ul>
        <li
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <a
              class="emotion-10"
              href="https://www.bbc.co.uk/pidgin"
            >
              Show headline
              <svg
                aria-hidden="true"
                class="emotion-11"
                focusable="false"
                height="12"
                viewBox="0 0 32 32"
                width="12"
              >
                <path
                  d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <a
              class="emotion-10"
              href="https://www.bbc.com/mundo"
            >
              Link with Headline
              <svg
                aria-hidden="true"
                class="emotion-11"
                focusable="false"
                height="12"
                viewBox="0 0 32 32"
                width="12"
              >
                <path
                  d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <a
              class="emotion-10"
              href="https://www.bbc.com/brasil"
            >
              Brasil homepage
              <svg
                aria-hidden="true"
                class="emotion-11"
                focusable="false"
                height="12"
                viewBox="0 0 32 32"
                width="12"
              >
                <path
                  d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
                />
              </svg>
            </a>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for list with no title 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-6 {
  background: #F6F6F6;
  padding: 0 0.5rem 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100%;
}

@media (min-width: 25rem) {
  .emotion-6 {
    padding: 0 1rem 1rem;
    margin: 0 -0.2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 0 1rem 1rem;
  }
}

.emotion-7 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-7 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-7 {
    width: calc(50% - 1rem);
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #545658;
}

.emotion-9 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
}

<div>
  <section
    aria-label="Related content"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <p
        class="emotion-4 emotion-5"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      >
        <a
          class="emotion-8"
          href="https://www.bbc.com/pidgin"
        >
          Single link
          <svg
            aria-hidden="true"
            class="emotion-9"
            focusable="false"
            height="12"
            viewBox="0 0 32 32"
            width="12"
          >
            <path
              d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for single card 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F6;
  width: 100%;
  height: 2rem;
  color: #3F3F42;
  padding: 0 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    border: solid 0.1875rem transparent;
    border-bottom: transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    margin-inline: 0.5rem;
    margin: 0;
  }
}

@media (min-width: 25rem) {
  .emotion-4 {
    margin-inline: 1rem;
    padding: 0 1rem;
    margin: 0 -0.2rem;
  }
}

.emotion-5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-7 {
  background: #F6F6F6;
  padding: 0 0.5rem 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100%;
}

@media (min-width: 25rem) {
  .emotion-7 {
    padding: 0 1rem 1rem;
    margin: 0 -0.2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    padding: 0 1rem 1rem;
  }
}

.emotion-8 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-8 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-8 {
    width: calc(50% - 1rem);
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9:visited {
  color: #545658;
}

.emotion-10 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
}

<div>
  <section
    aria-labelledby="Single-link"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <strong
        class="emotion-4"
        data-testid="eoj-recommendations-heading"
        id="Single-link"
      >
        Single link
      </strong>
      <p
        class="emotion-5 emotion-6"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <a
          class="emotion-9"
          href="https://www.bbc.com/pidgin"
        >
          Single link
          <svg
            aria-hidden="true"
            class="emotion-10"
            focusable="false"
            height="12"
            viewBox="0 0 32 32"
            width="12"
          >
            <path
              d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match snapshot when in dark ui mode 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-6 {
  background: #F6F6F6;
  padding: 0 0.5rem 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100%;
}

@media (min-width: 25rem) {
  .emotion-6 {
    padding: 0 1rem 1rem;
    margin: 0 -0.2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 0 1rem 1rem;
  }
}

.emotion-7 {
  position: relative;
  background-color: #E6E8EA;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-7 {
  position: relative;
  background-color: #E6E8EA;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-7 {
    width: calc(50% - 1rem);
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #545658;
}

.emotion-9 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
}

<div>
  <section
    aria-label="Related content"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <p
        class="emotion-4 emotion-5"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      >
        <a
          class="emotion-8"
          href="https://www.bbc.com/pidgin"
        >
          Single link
          <svg
            aria-hidden="true"
            class="emotion-9"
            focusable="false"
            height="12"
            viewBox="0 0 32 32"
            width="12"
          >
            <path
              d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</div>
`;
